yet another commit in FR

--- a/src/main.french.tex
+++ b/src/main.french.tex
@@ -310,29 +310,29 @@
       {
         \vspace{0.2pt} % Add space before "Role"
         \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-        \textbf{Role}: En tant que contributeur clé à la nouvelle stack logicielle de Difuze, j’ai participé aux décisions architecturales, au développement de modules et à la création de composants. J’ai géré de manière proactive le backlog via Jira, réalisé des revues de code sur GitLab et maintenu une documentation détaillée dans Confluence. Le tout dans un environnement B2B chez Difuze.\vspace{5pt}
+        \textbf{Rôle}: En tant que contributeur clé à la nouvelle stack logicielle de Difuze, j’ai participé aux décisions architecturales, au développement de modules et à la création de composants. J’ai géré de manière proactive le backlog via Jira, réalisé des revues de code sur GitLab et maintenu une documentation détaillée dans Confluence. Le tout dans un environnement B2B chez Difuze.\vspace{5pt}
 
         \vspace{0.1pt} % Add space before "Projects"
-        \textbf{Projects:}
+        \textbf{Projets:}
         \begin{itemize}[itemsep=1mm, topsep=5pt, leftmargin=8pt]
           \item \textbf{showcase.com}: Ancienne pile YII en PHP, avec scripts C\# pour automatisation (cron jobs).
           \item \textbf{difuzego.com}: Nouvelle pile basée sur des services AWS, écrite en TS.
         \end{itemize}
 
         \vspace{4pt} % Add space before "Purpose"
-        \textbf{Purpose}: Développement basé sur un système de gestion des ressources médias (MAM), accessible via HTTPS et le protocole SOAP, permettant l’affichage du contenu en catalogue, ainsi que le partage de films en screeners ou liens promotionnels, en amont des livraisons sous forme de commandes.\vspace{5pt}
+        \textbf{Objectif}: Développement basé sur un système de gestion des ressources médias (MAM), accessible via HTTPS et le protocole SOAP, permettant l’affichage du contenu en catalogue, ainsi que le partage de films en screeners ou liens promotionnels, en amont des livraisons sous forme de commandes.\vspace{5pt}
 
         \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, ainsi que divers modules NPM tels que ngx-translate, Bitmovin, fs-symlink, HammerJS, ngx-perfect-scrollbar, FontAwesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, Bowser, JSONEditor, Lodash, jschardet, etc.\vspace{5pt}
 
         \textbf{Back-end}: Services RESTful avec OpenAPI, architecture orientée TypeScript (tsoa), et utilisation de modules NPM tels que exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk, Promise, async/await...\vspace{5pt}
 
-        \textbf{Package Management}: Bonne maîtrise de WebPack, Node.js, nvm et yarn.\vspace{5pt}
+        \textbf{Gestion des paquets}: Bonne maîtrise de WebPack, Node.js, nvm et yarn.\vspace{5pt}
 
-        \textbf{Database and Search}: Gestion à la fois de l’ancienne pile (MySQL RDS) et de la nouvelle (DynamoDB, ElasticSearch).\vspace{5pt}
+        \textbf{Base de données et recherche}: Gestion à la fois de l’ancienne pile (MySQL RDS) et de la nouvelle (DynamoDB, ElasticSearch).\vspace{5pt}
 
         \textbf{AWS DevOps}: Expérience avec Elastic Beanstalk, EC2, S3, Lambda Layers, CloudWatch, IAM, ECR, SES, SNS, VPC. Infra déployée avec CloudFormation.\vspace{5pt}
 
-        \textbf{Additional Work}: Maintenance ancienne pile PHP/YII; dévs C\# en Mono Linux\vspace{5pt}
+        \textbf{Travail additionnel}: Maintenance ancienne pile PHP/YII; dévs C\# en Mono Linux\vspace{5pt}
 
         \textbf{Architecture}: Architecture monolithique, modèle de données partagé UI/API, dépôt GitLab unique pour front et back.\vspace{5pt}
 
@@ -361,15 +361,15 @@
     {
       \vspace{0.1pt} % Add space before "Role"
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Role}: Developed web functionalities for healthcare platforms, full-stack.\par
+      \textbf{Rôle}: Développement full-stack de fonctions web pour plateformes de santé.\par
       \vspace{4pt}
-      \textbf{Front-end:} Created VUE.js components without jQuery, using libraries such as super-agent for AJAX requests, moment.js for date formatting, simple-vue-validator for validation, and LESS for optimized CSS. Creation of a new time-entry component tailored on jquery.timeentry plugin (out of VUE.js).\par
+      \textbf{Front-end:} Création de composants VUE.js sans jQuery, en utilisant des bibliothèques comme super-agent pour les requêtes AJAX, moment.js pour le formatage des dates, simple-vue-validator pour la validation, et LESS pour un CSS optimisé.\par
       \vspace{4pt}
-      \textbf{Back-end:} Implemented PHP 5 solutions within the YII Framework, integrating the Carbon extension for enhanced date management, along with Python micro-services using SqlAlchemy. Ensured quality with precise unit tests and maintained accurate REST API documentation via APIARY.\par
+      \textbf{Back-end:} Implémentation de solutions en PHP 5 avec le framework YII, intégrant l’extension Carbon pour une meilleure gestion des dates, ainsi que des microservices Python avec SQLAlchemy. Assurance qualité par des tests unitaires rigoureux et documentation REST précise via APIARY.\par
       \vspace{4pt}
-      \textbf{Mobile and Process Agility:} Conducted detailed Android code reviews and operated within a three-week sprint cycle, actively participating in standups, demos, retros, and grooming. Managed tasks and backlogs through Jira, with documentation centralized in Confluence.\par
+      \textbf{Mobilité et agilité des processus:} Réalisé des revues de code Android détaillées et travaillé en cycles de sprints de trois semaines, avec participation active aux stand-ups, démos, rétrospectives et séances de grooming. Gestion des tâches et du backlog via Jira, avec documentation centralisée dans Confluence.\par
       \vspace{4pt}
-      \textbf{Virtualization:} Deployed µservices and software component as Dockerized\par
+      \textbf{Virtualization:} Déploiement de µservices et composants via Docker.\par
     }
     {Montreal} % Location on the second line, aligned to the right
 
@@ -377,24 +377,24 @@
 
   \cvitemRightNew
     {May, 2015 – Dec, 2016} % Date
-    {Front-End Developer in the Digital TV Sector} % Job title
+    {Développeur Front-End — TV numérique.} % Job title
     {Abbeal for Canal+} % Company
     {
       \vspace{-0.4pt} % Add space before "Role"
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Role}: Developed and maintained WebApp interfaces and back-end for Canal+ digital TV receivers, reaching millions on TNT, SATELLITE, and IPTV.\par
+      \textbf{Rôle}: Développement et maintenance WebApp et back-end pour les décodeurs Canal+ (TNT, satellite, IPTV), millions d’utilisateurs.\par
       \vspace{4pt}
-      \textbf{Front-End:} Engineered HTML, JS, CSS solutions, managed by Webpack, executed by Qt/WebKit on Linux. Used ES2015 standards with Babel, grunt\par
+      \textbf{Front-End:} Conception de solutions HTML, JS, CSS gérées par Webpack, exécutées via Qt/WebKit sous Linux. Utilisation des standards ES2015 avec Babel et Grunt.\par
       \vspace{4pt}
-      \textbf{Server-Side:} Supported by a Python UWSGI server hosting the WebApp and managing routing through DBUS for system interactions.\par
+      \textbf{Côté serveur:} support assuré par un serveur Python UWSGI hébergeant la WebApp et gérant le routage via DBUS pour les interactions système.\par
       \vspace{4pt}
-      \textbf{Libraries and Frameworks:} Transitioned from BACKBONE to ANGULAR for enhanced MVC architecture; used LODASH for advanced data manipulation, EASELJS for interactive canvas operations, and EJS for templating.\par
+      \textbf{Bibliothèques et frameworks:} Transition de BACKBONE vers ANGULAR (MVC amélioré), avec LODASH (données), EASELJS (canvas) et EJS (templating).\par
       \vspace{4pt}
-      \textbf{Agile and Testing:} Conducted MOCHA, SPY, and SINON unit tests and POSTMAN API testing. Managed agile sprints, tracked tasks on Jira, documented in Confluence.\par
+      \textbf{Agile and Testing:} Tests unitaires avec MOCHA, SPY, SINON; tests API avec POSTMAN. Sprints agiles, suivi sur Jira, documentation sur Confluence.\par
       \vspace{4pt}
-      \textbf{Deployment:} Successfully deployed to 400,000 TNT receivers and subsequently expanded to over 2 million SAT subscribers globally.\par
+      \textbf{Déploiement:} Déployé avec succès sur 400 000 récepteurs TNT, puis étendu à plus de 2 millions d’abonnés SAT dans le monde.\par
       \vspace{4pt}
-      \textbf{Nightwatch Project:} Led a Selenium-based task for UI navigation testing and REST API simulation, implemented on AWS EC2 with Docker.\par
+      \textbf{Projet Nightwatch:} Pilotage d’un projet de tests UI (Selenium) et simulation d’API REST, déployé sur AWS EC2 via Docker.\par
       \vspace{4pt} % Ensures there is space after the last section before any text that might follow or end of the section.
     }
     {Paris (FR)} % Location on the second line, aligned to the right
@@ -404,18 +404,18 @@
 
   \cvitemRightNew
     {Dec, 2014 – Apr, 2015} % Date
-    {Mobile and Backend Developer | Android \& NodeJS} % Job title
+    {Développeur mobile et back-end | Android \& Node.js} % Job title
     {Cisco} % Company
     {
       \vspace{1pt} % Add space before "Project"
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: Integrated IoT with advanced TV for home automation.\par
+      \textbf{Projet}: Intégration de l’IoT avec la télévision avancée pour la domotique.\par
       \vspace{4pt}
-      \textbf{Technologies}: IoT using openHAB, Bluetooth (iBeacons), WiFi (Cisco MSE/Prime), RFID (Impinj). Enhanced TV channel personalization, ad targeting w/ Cisco analytics. Developed apps for wearables and Samsung mobiles, webSockets, Node.js servers.\par
+      \textbf{Technologies}: IoT avec openHAB, Bluetooth (iBeacons), WiFi (Cisco MSE/Prime), RFID (Impinj). Personnalisation des chaînes TV et ciblage publicitaire via Cisco Analytics. Développement d’apps pour wearables et mobiles Samsung, serveurs webSockets et Node.js.\par
       \vspace{4pt}
-      \textbf{Ambilight \& UI}: Developed ambilight effects with GStreamer, matching Philips Hue lighting via Zigbee. Transitioned UI from Dart/WebGL to HTML/CSS on Cisco’s JUNO.\par
+      \textbf{Ambilight \& UI}: Effets ambilight développés avec GStreamer, synchronisés avec l’éclairage Philips Hue via Zigbee. Migration de l’interface de Dart/WebGL vers HTML/CSS sur la plateforme JUNO de Cisco.\par
       \vspace{4pt}
-      \textbf{Achievements}: Showcased at CES 2015, featured at Mobile World Congress, awarded \textit{Best IoT Product} by CSI Magazine.\par
+      \textbf{Distinctions}: Présenté au CES 2015, au Mobile World Congress, primé "Best IoT Product" par CSI Magazine.\par
       \vspace{4pt} % Ensures there is space after the last section before any text that might follow or end of the section.
     }
     {Paris (FR)} % Location on the second line, aligned to the right
