finishing FR translation

--- a/src/main.english.tex
+++ b/src/main.english.tex
@@ -108,13 +108,13 @@
       \pointskillFifty{}{Matlab}
       \pointskillFortyQt{}{C++ / C   (QT 5)}
     \chartlabel{Front-end (web)}\\
-      \pointskillNinety{}{Angular (9/10/14/17.1)}
+      \pointskillNinety{}{Angular (9/10/14)}
       \pointskillSeventy{}{React, jQuery}
-      \pointskillEighty{}{RxJS / Observables}
-      \pointskillEighty{}{Angular Material / PrimeNG}
+      \pointskillSeventy{}{RxJS / Observables}
       \pointskillSeventy{}{SCSS / SASS, Bootstrap}
       \pointskillSixty{}{Backbone, VueJS}
       \pointskillForty{}{ThreeJS (3D)}
+      \pointskillThirty{}{LaTeX (Typesetting)}
     \chartlabel{Back-end}\\
       \pointskillNinety{}{OpenAPI/Swagger (TSOA)}
       \pointskillSeventy{}{Express, Node.js}
@@ -167,7 +167,7 @@
 \pointskillSeventy{}{Video.js (open source)}
 
 \chartlabel{Multimedia}\\
-\pointskillNinety{}{ffmpeg, mediainfo, ffprobe}
+\pointskillNinety{}{ffmpeg, mediainfo, fprobe}
 \pointskillNinety{}{AWS MediaConvert}
 \pointskillSeventy{}{Hybrik (Dolby)}
 
@@ -331,7 +331,7 @@
 
         \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, Lambda layers, CloudWatch, IAM, ECR, SES, SNS, VPC. Infra deployed with Cloudformation.\vspace{5pt}
 
-        \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu.\vspace{5pt}
+        \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu\.vspace{5pt}
 
         \textbf{Architecture}: Monolithic, no microservice. Data model shared between UI \& API. Common gitlab repository for front-end and back-end.\vspace{5pt}
 
