--- a/src/main.french.tex
+++ b/src/main.french.tex
@@ -118,7 +118,7 @@
       \chartlabel{Développement Back-end}\\
       \pointskillNinety{}{OpenAPI/Swagger (TSOA)}
       \pointskillSeventy{}{Express, Node.js}
-      \pointskillSixty{}{Microservices (in Python)}
+      \pointskillSixty{}{Microservices (en Python)}
       \pointskillSixty{}{Yii (PHP framework)}
       \pointskillSixty{}{Knex (Postgres, SQLite)}
       \pointskillThirty{}{Django (Python framework)}
@@ -225,7 +225,7 @@
 \profilesection{Langues}
 \vspace{-1mm} % Ajuster l'espacement négatif si nécessaire
 \barskillLang{}{\textbf{Français} (langue maternelle)}{100}
-\barskillLang{}{\textbf{Anglais} (TOEFL)}{92}
+\barskillLang{}{\textbf{Anglais} (certifié TOEFL)}{92}
 \barskillLang{}{\textbf{Allemand} (scolaire, 2 ans)}{35}
 \barskillLang{}{\textbf{Espagnol} (débutant, Duolingo)}{25}
 
@@ -274,7 +274,7 @@
 
 \vspace*{-3.5em} % Adjust the value as needed
 
-\cvsection{Working Experience}
+\cvsection{Expérience professionnelle}
 
 
 \begin{cvtableNew}
@@ -369,7 +369,7 @@
       \vspace{4pt}
       \textbf{Mobilité et agilité des processus:} Réalisé des revues de code Android détaillées et travaillé en cycles de sprints de trois semaines, avec participation active aux stand-ups, démos, rétrospectives et séances de grooming. Gestion des tâches et du backlog via Jira, avec documentation centralisée dans Confluence.\par
       \vspace{4pt}
-      \textbf{Virtualization:} Déploiement de µservices et composants via Docker.\par
+      \textbf{Virtualisation:} déploiement de microservices et de composants logiciels sous forme de conteneurs Docker.\par
     }
     {Montreal} % Location on the second line, aligned to the right
 
@@ -390,7 +390,7 @@
       \vspace{4pt}
       \textbf{Bibliothèques et frameworks:} Transition de BACKBONE vers ANGULAR (MVC amélioré), avec LODASH (données), EASELJS (canvas) et EJS (templating).\par
       \vspace{4pt}
-      \textbf{Agile and Testing:} Tests unitaires avec MOCHA, SPY, SINON; tests API avec POSTMAN. Sprints agiles, suivi sur Jira, documentation sur Confluence.\par
+      \textbf{Méthodologies agiles et tests:} Tests unitaires avec MOCHA, SPY, SINON; tests API avec POSTMAN. Sprints agiles, suivi sur Jira, documentation sur Confluence.\par
       \vspace{4pt}
       \textbf{Déploiement:} Déployé avec succès sur 400 000 récepteurs TNT, puis étendu à plus de 2 millions d’abonnés SAT dans le monde.\par
       \vspace{4pt}
@@ -424,29 +424,21 @@
 
     \cvitemRightNew
     {Aug, 2014 – Dec, 2014} % Date
-    {Front-End developer | HTML \& JS | Digital TV apps} % Job title
+    {Développeur Front-End | HTML \& JS | Applis TV num} % Job title
     {Cisco} % Company
     {
       \vspace{1pt} % Add space before "Project"
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: Integrated IoT with advanced TV for home automa
-      \textbf{Project}: Proof of concept WebApp for ZON TV Portugal.\par
+      \textbf{Projet}: Preuve de concept de WebApp pour ZON TV Portugal.\par
       \vspace{4pt}
-      \textbf{Technologies}: Vanilla JS, CSS3, HTML5 video player in custom UI manager to structure MVC views. Built core components such as the channel list, channel banner, EPG grid.\par
+      \textbf{Technologies}: Vanilla JS, CSS3, lecteur vidéo HTML5 dans un gestionnaire UI personnalisé pour structurer les vues MVC. Développement de composants clés : liste des chaînes, bandeau d’information, grille EPG.\par
       \vspace{4pt}
-      \textbf{Integration and Workflow}: Used QT on RDK middleware for optimized STB-to-backend data handling. Grunt (Node) and Jenkins for continuous integration, managing tasks through JIRA, and promoting effective teamwork in scrum.\par
+      \textbf{Intégration et flux de travail}: Utilisation de QT sur middleware RDK pour une gestion optimisée des données entre le STB et le backend. Grunt (Node) et Jenkins pour l’intégration continue, gestion des tâches via JIRA et promotion du travail d’équipe en mode Scrum.\par
       \vspace{4pt}
-      \textbf{Outcome}: Successfully delivered a high-performance WebApp that improved user interaction between STB and ZON TV backend, showcased as an effective POC at major industry events.
+      \textbf{Résultat}: Livraison réussie d’une WebApp performante, améliorant l’interaction utilisateur entre le STB et le backend ZON TV, présentée comme preuve de concept lors de grands événements du secteur.
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 \end{cvtableNew}
-
-
-
-
-
-
-
 
 
 
@@ -458,33 +450,32 @@
 \begin{cvtableNew}
   \cvitemRightNew
     {Jan, 2014 – Jul, 2014} % Date
-    {Interactive Front-End coder | BackboneJS \& ThreeJS} % Job title
+    {Développeur Front-End | BackboneJS \& ThreeJS} % Job title
     {Cisco} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: HTML5 application for Belgacom on RDK middleware; delivered high-performance POC with HW acceleration (GPU).\par
+      \textbf{Projet}: Application HTML5 pour Belgacom sur middleware RDK ; POC performant avec accélération matérielle (GPU).\par
       \vspace{4pt}
-      \textbf{Responsibilities}: app based on CSS3D and Three.JS part of BackboneJS views; with AJAX, WebSockets, Hammer.JS for tablet; packaged via PhoneGap.\par
+      \textbf{Responsabilités}: App basée sur CSS3D/Three.JS dans les vues BackboneJS ; AJAX, WebSockets, Hammer.JS pour tablette; empaquetée via PhoneGap.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 
     \vspace{1.57mm} % Add vertical space after this entry
 
+
   \cvitemRightNew
     {Mar, 2013 – Jan, 2014} % Date
-    {Creative CSS3D/HTML5/JS for embedded devices } % Job title
+    {Développeur CSS3D/HTML5/JS embarqué} % Job title
     {NDS} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: HTML5 development for smart TVs, HDMI stick, Raspberry Pi, tablets.\par
+      \textbf{Projet}: Dév HTML5 pour smart TVs, clés HDMI, Raspberry Pi, tablettes.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Built features with HTML5, CSS3D, WebGL, BackboneJS, ThreeJS (Collada), Tween.js.
-      Optimized HW performance for QT5/WebKit, WebKitNix, Chromium. Cross-compiled web engines and gstreamers to target LG TVs,
-      Raspberry Pi, Cotton Candy, MacOS rendering the same webapp.\par
+      \textbf{Responsabilités}: Fonctionnalités en HTML5, CSS3D, WebGL, BackboneJS, ThreeJS (Collada), Tween.js. Optimisation HW pour QT5/WebKit, WebKitNix, Chromium. Cross-compilation de moteurs web et gstreamers pour LG TV, Raspberry Pi, Cotton Candy, MacOS (même WebApp).\par
       \vspace{4pt}
-      \textbf{Outcome}: Delivered high-performance solutions attracting Belgacom \& Zon TV.\par
+      \textbf{Résultat}: Solutions performantes retenues par Belgacom \& Zon TV.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 
@@ -492,16 +483,16 @@
 
   \cvitemRightNew
     {Aug, 2012 – Feb, 2013} % Date
-    {Front-End | AngularJS \& Backbone | Digital TV} % Job title
+    {Front-End | AngularJS \& Backbone | TV num} % Job title
     {Cisco (ex NDS)} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: HTML5 solution for digital TV with patented remote UI, 2nd-screen.\par
+      \textbf{Projet}: Solution HTML5 TV numérique, UI distante brevetée, second écran.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Developed on a patented HTML5 rendering solution for payTV, showcased @IBC. Evaluated how new generation of frameworks: Angular, Backbone, Spine, Google key controler behave on STB with benchmarks. Built MVC architecture for STB apps, assessed Flash-to-Html5 (e.g Adobe Edge).\par
+      \textbf{Responsabilités}: Dév d’une solution de rendu HTML5 brevetée pour la payTV, présentée à l’IBC. Évaluation de frameworks nouvelle génération (Angular, Backbone, Spine, contrôleur Google) sur STB avec benchmarks. Architecture MVC pour apps STB, étude des migrations Flash vers HTML5 (ex. Edge).\par
       \vspace{4pt}
-      \textbf{Skills}: HTML5 Development, Frameworks evaluation, MVC Architecture, Open-Source tools (GIT, Jira, Jenkins, Confluence).\par
+      \textbf{Compétences}: Dév HTML5, évaluation de frameworks, architecture MVC, outils open source (GIT, Jira, Jenkins, Confluence).\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 
@@ -509,14 +500,14 @@
 
   \cvitemRightNew
     {Dec, 2010 – Jul, 2012} % Date
-    {Embedded Systems Developer | WebKit/QT \& HTML5} % Job title
+    {Dév systèmes embarqués | WebKit/QT \& HTML5} % Job title
     {NDS} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: QT/WebKit integration on specialized chips, performance, compliance.\par
+      \textbf{Projet}: Intégration QT/WebKit sur puces spécialisées, perfos et conformité.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Cross-compiled QT/WebKit for various STB chipsets, developed Java-QT bridges for QWebView (Android, Qt). Automated binary distribution via shell (IN, IL), packaged HTML5 as .CRX for corporate app store.\par
+      \textbf{Responsabilités}: Cross-compilation de QT/WebKit pour divers chipsets STB. Passerelles Java-QT pour QWebView (Android, Qt). Distribution binaire automatisée via scripts shell (IN, IL), packaging HTML5 en .CRX pour store d’entreprise.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 
@@ -524,24 +515,16 @@
 
   \cvitemRightNew
   {Feb, 2002 – Nov, 2010} % Date
-  {Web Engine Integration, HTML widgets coder} % Job title
+  {Intégration moteur web, dév widgets HTML} % Job title
   {Canal+} % Company
   {
     \vspace{1pt}
     \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-    \textbf{Projects}:
-    - Integrated Opera 6 then NetFront web engines into STBs, enabling advanced digital TV functionality. Cross-Department collaboration, worlwide. \par
+    \textbf{Projet}: Intégr$\theta$ des moteurs web Opera 6 puis NetFront dans les STB, avec fonctions avancées TV numérique. Collaboration interservices à l’échelle mondiale.\par
     \vspace{4pt}
-    \textbf{Responsibilities}:
-    Led NDS/ACCESS collaboration for STB middleware integration, bindings to file system, memory manager, graphic stack, network interface, ssl,
-    cross-platform porting.
-    Developed Java-Opera and Java-QT bridges for custom plugins like Netscape, for seamless integration, multimedia playback.
-    Additionnaly, built frameworks for STB games, modernized HTML standards, conducting performance optimization for multiple platforms.
-    Creation of a bank of widgets, TV-oriented, STB-to-iPhone interaction, social networks (Facebook)
-
-    \par
+    \textbf{Responsabilités}~: Coordination NDS/ACCESS pour l’intégration middleware STB : système fichiers, mémoire, graphisme, réseau, SSL, portage. Passerelles Java-Opera/Java-QT pour plugins type Netscape. Frameworks pour jeux STB, mise à jour HTML, optimisation multi-plateformes. Banque de widgets TV, interaction STB-iPhone, réseaux sociaux (Facebook).\par
     \vspace{4pt}
-    \textbf{Skills}: browser integration. C/C++, Java. HTML, CSS, JS. HBBTV, CE-HTML\par
+    \textbf{Compétences}: Intégration navigateur. C/C++, Java. HBBTV, CE-HTML, CSS, JS\par
   }
     {Paris (FR)} % Location on the second line, aligned to the right
 
@@ -549,16 +532,16 @@
 
   \cvitemRightNew
     {Sep, 1999 – Dec, 2001} % Date
-    {Pay-TV System Integrator, Content Delivery Network} % Job title
+    {Intégrateur Pay-TV, réseau de diffusion de contenu} % Job title
     {Canal+} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: System integration and testing for Canal+ global multimedia platforms.\par
+      \textbf{Projet}: Intégration système et test des plateformes Canal+ à l’international.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Developed test scripts, managed end-to-end HW/SW integration, and provided on-site (Sacramento, USA) and remote support for Spain, Netherland, Japan.\par
+      \textbf{Responsabilités}: Développement de scripts de test, intégration HW/SW de bout en bout, support sur site (Sacramento, USA) et à distance pour l’Espagne, les Pays-Bas et le Japon.\par
       \vspace{4pt}
-      \textbf{Skills}: Digital TV standards: DVB, MHP. Broadcasting: DVB-C, DVB-S, DVB-T.\par
+      \textbf{Aptitude}: Digital TV standards: DVB, MHP. Broadcasting: DVB-C, DVB-S, DVB-T.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 
@@ -566,16 +549,14 @@
 
     \cvitemRightNew
     {Oct, 1998 – Aug, 1999} % Date
-    {DSP Engineer | Acoustic Echo Cancellation} % Job title
+    {Ingénieur DSP | Annulation d’écho acoustique} % Job title
     {ALTEN} % Company
     {
       \vspace{1pt}
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
-      \textbf{Project}: Spearheaded the development of Acoustic Echo Cancellation (AEC) solutions, enhancing audio clarity and speakerphone functionality in mobile devices, using advanced MATLAB and C++ techniques.\par
+      \textbf{Projet}: Pilotage du développement de solutions AEC (Annulation d’écho acoustique), améliorant la clarté audio et le mode haut-parleur sur mobile, via des techniques avancées en MATLAB et C++.\par
       \vspace{3.6pt}
-      \textbf{Responsibilities}: Tuned AEC algorithms for echo suppression, noise reduction
-      . Simulated and tested hands-free calls using a Visual C++
-      executable.
+      \textbf{Responsabilités}: Réglage des algos AEC pour suppression d’écho et réduction de bruit. Simulation et tests d’appels mains libres via un exécutable Visual C++.
     }
     {Issy Les Moulineaux (FR)} % Location on the second line, aligned to the right
 
